CSRF tag for auth token

--- a/blog/app/views/user/new.html.erb
+++ b/blog/app/views/user/new.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Sign up') %>
+<head><%= csrf_meta_tags %></head>
 <div class="col-md-4">
   <h1>Sign up</h1>
   <form accept-charset="UTF-8" action="/user" class="new_user"
